--- a/package.json
+++ b/package.json
@@ -71,14 +71,15 @@
     ]
   },
   "dependencies": {
+    "@y/redis": "file:",
     "lib0": "^0.2.93",
     "redis": "^4.6.12",
     "uws": "github:uNetworking/uWebSockets.js#v20.40.0",
     "yjs": "^13.5.6"
   },
   "optionalDependencies": {
-    "postgres": "^3.4.3",
-    "minio": "^7.1.3"
+    "minio": "^7.1.3",
+    "postgres": "^3.4.3"
   },
   "engines": {
     "npm": ">=8.0.0",
